# ivm-xyz

./: .gitignore  BACKGROUND.md  LICENSE  README.md  clone_4dsolutions.py  pyproject.toml  qrays.py  requirements.txt  setup.py  tetravolume.py  tetravolume_3.py  visualize.py  visualize_2.py
archive/: tests.py  tetravolume_2.py  visualize_2.py
docs/: .cursorrules  AGENTS.md  API.md  BACKGROUND.md  DOCUMENTATION_INDEX.md  MODULES.md  STRUCTURE.md  TECHNICAL_REFERENCE.md  TESTING_SUMMARY.md
examples/: basic_usage.py  visualization_examples.py
ivm_xyz/: __init__.py
ivm_xyz/conversion/: __init__.py  converters.py
ivm_xyz/core/: __init__.py  constants.py  tetrahedron.py  triangle.py  vectors.py
ivm_xyz/polyhedra/: __init__.py  base.py  edge_counting.py  platonic.py
ivm_xyz/visualization/: __init__.py  plotter.py
scripts/: generate_comprehensive_report.py  test_runner.py  verify_documentation.py
tests/: __init__.py  test_conversion.py  test_functional_comprehensive.py  test_imports_comprehensive.py  test_integration_comprehensive.py  test_polyhedra.py  test_tetrahedron.py  test_triangle.py  test_vector_advanced.py  test_vectors.py  test_visualization.py  test_visualization_comprehensive.py
working/: setup.py
working/forked_from_SoT/: convert.py  flextegrity.py  ivm_tetra_edges.py  polyhedra.py
