[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ivm-xyz"
version = "0.1.0"
description = "Convert between XYZ and IVM geometric spaces"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "IVM-XYZ Contributors"}
]
keywords = ["geometry", "mathematics", "tetrahedron", "ivm", "quadray", "synergetics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.0.0",
    "imageio>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/docxology/ivm-xyz"
Documentation = "https://github.com/docxology/ivm-xyz"
Repository = "https://github.com/docxology/ivm-xyz"

[tool.setuptools]
packages = ["ivm_xyz"]

[tool.setuptools.package-data]
ivm_xyz = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

